--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
+mongoose.connect('mongodb+srv://blog-pages:X54D8pZFqTJnx6h4@cluster0.4dpwnxm.mongodb.net/?retryWrites=true&w=majority');
+
 DB_PW=X54D8pZFqTJnx6h4
 DB_USER=blog-pages
